# The-AI-Engineer-Challenge

./: .env.template  .gitignore  .pre-commit-config.yaml  ACITVITIES.md  MERGE.md  README.md  export_requirements.py  pyproject.toml
.cursor/rules/: frontend-rule.mdc  general-rule.mdc
api/: Dockerfile  app.py  fly.toml  requirements.txt
api/aimakerspace/: text_utils.py  vectordatabase.py
api/aimakerspace/openai_utils/: chatmodel.py  embedding.py  prompts.py
api/tests/e2e/: api_tests.py
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/src/app/: GpxMapPreview.tsx  globals.css  layout.tsx  page.module.css  page.tsx
uploaded_files/: Muntanya_12km_400m.gpx
