[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "openai",
    "pydantic>=2.11.4",
    "pypdf>=5.7.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.3",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "reportlab>=4.4.2",
]

[tool.pytest.ini_options]
python_files = "test_* *_tests.py *_utests.py"
python_classes = "Test* *Tests"
